# ai-stock-analysis

./: .env.example  .gitignore  BUILDING_EN.md  BUILDING_TH.md  LICENSE  README.md  pyproject.toml
config/: screening_criteria.yaml  settings.example.yaml
output/: pipeline_summary.json
src/stock_analysis/: __init__.py  config.py  database.py  logging.py  run.py
src/stock_analysis/calc_engine/: __init__.py  affo_reit.py  comparables.py  dcf_cyclical.py  dcf_ddm.py  dcf_fcff.py  industry_classifier.py  ratios.py  residual_income.py  sensitivity.py  valuate.py
src/stock_analysis/data/: __init__.py  cache.py  fetch.py  macro_data.py  market_data_client.py  sec_edgar_client.py
src/stock_analysis/llm/: __init__.py  analyze.py  groq_client.py
src/stock_analysis/llm/prompts/: annual_report_summary.txt  industry_commentary.txt  meeting_synthesizer.txt  qc_checker.txt  risk_synthesizer.txt  thesis_generator.txt
src/stock_analysis/mcp_servers/: sec_edgar_server.py
src/stock_analysis/models/: __init__.py
src/stock_analysis/report/: __init__.py  charts.py  generator.py
src/stock_analysis/report/static/: report.css
src/stock_analysis/report/templates/: report.html
src/stock_analysis/screening/: __init__.py  screener.py  us_universe.py
